apps/production/client-sites/jenny-psiquiatra/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenny-psiquiatra
  name: jenny-psiquiatra
  namespace: lulo-demo-landings
spec:
  selector:
    app: jenny-psiquiatra
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
