apps/production/client-sites/jenny-psiquiatra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenny-psiquiatra
  namespace: lulo-demo-landings
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: jenny-psiquiatra-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Demo Lulo AI"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jenny-psiquiatra.demo.luloai.com
      secretName: jenny-psiquiatra-tls
  rules:
    - host: jenny-psiquiatra.demo.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenny-psiquiatra
                port:
                  number: 3000
